@@ -1,0 +1,11 @@
+package test.reports;
+
+import org.testng.annotations.Ignore;
+import org.testng.annotations.Test;
+
+public class SimpleIgnoredSample {
+
+  @Test
+  @Ignore
+  public void ignored() {}
+}
